...
    
    lazy var homeView: HomeView = {
        let view = HomeView()
        view.backgroundColor = ThemeManager.defaultTheme.colorTheme.background
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationController?.navigationBar.backgroundColor = .systemBackground
        title = "Haberler"
        view.delegate = self
        return view
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
